--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "muddy-truth-5b42",
   "version": "0.0.0",
   "devDependencies": {
-    "wrangler": "2.20.0"
+    "wrangler": "^3.28.1"
   },
   "private": true,
   "scripts": {
