--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "muddy-truth-5b42"
+name = "kv-value-retriever"
 main = "src/index.js"
 compatibility_date = "2023-05-15"
 usage_model = "bundled"
@@ -7,9 +7,6 @@ env = { }
 [triggers]
 crons = [ ]
 
-# wrangler pulls environment from Cloudflare when running locally
-# preview_id is used as Key Value storage then
 [[kv_namespaces]]
 id = "b2932f29cf9b4f9caa6a22b5b21b9859"
-preview_id = "2fa831adee5c4211bf6e44ba3c52c0bb"
 binding = "ku"
